[package]
name = "brest"
version = "0.2.1"
edition = "2021"
description = "Simple response format for web apis"
authors = ["Vero <veronoicc@proton.me>"]
license = "BSD-3-Clause"
documentation = "https://docs.rs/brest/latest/brest"
repository = "https://github.com/veronoicc/brest"

[package.metadata]
msrv = "1.56.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars ={ version = "0.8", optional = true }
axum = { version = "0.8",features = ["json", "matched-path", "form", "query", "macros"], default-features = false, optional = true}

[features]
schemars = ["dep:schemars"]
try = []
axum = ["dep:axum"]
